--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Opu-Nembe Community</title>
+  <title>Nembe Community</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet" />
 </head>
@@ -12,9 +12,9 @@
   <header class="header">
     <div class="navbar">
       <a href="index.html" class="logo-link">
-        <img src="images/ChatGPT Image Sep 2, 2025, 08_09_21 PM.png" alt="Opu-Nembe Logo" class="logo-img" />
+        <img src="images/ChatGPT_Image_Sep_4__2025__12_26_36_PM-removebg-preview.png" alt="Nembe Logo" class="logo-img" />
         <div class="site-name">
-          Opu-Nembe <span>Bassambiri</span>
+          Nembe <span>Digital Hub</span>
         </div>
       </a>
       <nav class="nav">
@@ -34,7 +34,7 @@
       <div class="hero-gradient"></div>
     </div>
     <div class="hero-content">
-      <h1>Welcome to Opu-Nembe Community <span style="color: rgb(132,186,156);">Digital Hub</span></h1>
+      <h1>Welcome to Nembe Community <span style="color: rgb(132,186,156);">Digital Hub</span></h1>
       <p class="hero-subtitle">
         Celebrating our heritage while empowering students with technology and opportunities.
       </p>
@@ -46,14 +46,14 @@
   <section class="about">
     <h2>About Our Community</h2>
     <p>
-      Opu-Nembe (Bassambiri) is a historic kingdom in Bayelsa State, with a strong tradition of leadership, resilience, and progress. 
+      Nembe  is a historic kingdom in Bayelsa State, with a strong tradition of leadership, resilience, and progress. 
       This platform connects our people, supports ICT training for students, and provides job opportunities for youth.
     </p>
   </section>
 
   <!-- Footer -->
   <footer class="footer">
-    <p>&copy; 2025 Opu-Nembe Community | Powered by opu-nembe peace and reconciliation committee </p>
+    <p>&copy; 2025 Nembe Community | Powered by Nembe peace and reconciliation committee </p>
   </footer>
 
   <script src="script.js"></script>
