--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Student Registration - Opu-Nembe</title>
+  <title>Student Registration - Nembe</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet" />
   <script defer src="script.js"></script>
@@ -352,9 +352,9 @@ body {
   <header class="header">
     <div class="navbar">
       <a href="index.html" class="logo-link">
-        <img src="images/ChatGPT Image Sep 2, 2025, 08_09_21 PM.png" alt="Opu-Nembe Logo" class="logo-img" />
+        <img src="images/ChatGPT_Image_Sep_4__2025__12_26_36_PM-removebg-preview.png" alt="Nembe Logo" class="logo-img" />
         <div class="site-name">
-          Opu-Nembe <span>Bassambiri</span>
+          Nembe <span> Digital Hub</span>
         </div>
       </a>
       <nav class="nav">
@@ -487,7 +487,7 @@ body {
 
   <!-- Footer -->
   <footer class="footer">
-    <p>&copy; 2025 Opu-Nembe Community | Powered by opu-nembe peace and reconciliation committee nciliation committee </p>
+    <p>&copy; 2025 Nembe Community | Powered by Nembe peace and reconciliation committee nciliation committee </p>
   </footer>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
