--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nembe Community</title>
+  <title>Bassambiri Community</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet" />
 </head>
@@ -12,16 +12,22 @@
   <header class="header">
     <div class="navbar">
       <a href="index.html" class="logo-link">
-        <img src="images/ChatGPT_Image_Sep_4__2025__12_26_36_PM-removebg-preview.png" alt="Nembe Logo" class="logo-img" />
+        <img src="images/ChatGPT_Image_Oct_20__2025__03_29_20_AM-removebg-preview.png" alt="Bassambiri Logo" class="logo-img" />
         <div class="site-name">
-          Nembe <span>Digital Hub</span>
+          Bassambiri <span>Digital Hub</span>
         </div>
       </a>
-      <nav class="nav">
+      <!-- Mobile hamburger button (visible on small screens) -->
+      <button id="navToggle" class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+        <span class="hamburger"></span>
+      </button>
+
+      <nav class="nav" id="mainNav">
         <ul class="nav-list">
           <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="register.html">Register</a></li>
+          <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSespAVW5IFPMdv0Vae_xrFJabW0CgbzHp669JcKj4Dokhq9UQ/viewform?usp=header">Register</a></li>
           <li><a href="jobs.html">Job Portal</a></li>
+          <li><a href="admin.html">Admin Login</a></li>
         </ul>
       </nav>
     </div>
@@ -34,11 +40,13 @@
       <div class="hero-gradient"></div>
     </div>
     <div class="hero-content">
-      <h1>Welcome to Nembe Community <span style="color: rgb(132,186,156);">Digital Hub</span></h1>
+      <h1>Welcome to Bassambiri <span style="color: rgb(132,186,156);">Digital Hub</span></h1>
       <p class="hero-subtitle">
         Celebrating our heritage while empowering students with technology and opportunities.
       </p>
-      <a href="register.html" class="btn btn-primary">Register for Training</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSespAVW5IFPMdv0Vae_xrFJabW0CgbzHp669JcKj4Dokhq9UQ/viewform?usp=header" class="btn btn-primary">Register for Training</a>
+            <a href="http://fuab.edu.ng/" class="btn btn-primary">Get to FUAB</a>
+
     </div>
   </section>
 
@@ -46,14 +54,14 @@
   <section class="about">
     <h2>About Our Community</h2>
     <p>
-      Nembe  is a historic kingdom in Bayelsa State, with a strong tradition of leadership, resilience, and progress. 
+      Bassambiri  is a historic kingdom in Bayelsa State, with a strong tradition of leadership, resilience, and progress. 
       This platform connects our people, supports ICT training for students, and provides job opportunities for youth.
     </p>
   </section>
 
   <!-- Footer -->
   <footer class="footer">
-    <p>&copy; 2025 Nembe Community | Powered by Nembe peace and reconciliation committee </p>
+    <p>&copy; 2025 Bassambiri Community | Powered by Bassambiri peace and reconciliation committee </p>
   </footer>
 
   <script src="script.js"></script>
