close registration added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav class="nav" id="mainNav">
         <ul class="nav-list">
           <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSespAVW5IFPMdv0Vae_xrFJabW0CgbzHp669JcKj4Dokhq9UQ/viewform?usp=header">Register</a></li>
+          <li><a href="registration-closed.html">Register</a></li>
           <li><a href="jobs.html">Job Portal</a></li>
           <li><a href="admin.html">Admin Login</a></li>
         </ul>
@@ -44,7 +44,7 @@
       <p class="hero-subtitle">
         Celebrating our heritage while empowering students with technology and opportunities.
       </p>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSespAVW5IFPMdv0Vae_xrFJabW0CgbzHp669JcKj4Dokhq9UQ/viewform?usp=header" class="btn btn-primary">Register for Training</a>
+      <a href="registration-closed.html" class="btn btn-primary">Register for Training</a>
             <a href="http://fuab.edu.ng/" class="btn btn-primary">Get to FUAB</a>
 
     </div>
